--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 </div>
                 <div class="col-5">
                   <div class="ratio ratio-16x9">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/Ys79W4mW9xM?si=fldU2jHMLTALkyWM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/SrqR_sgUlyc?si=HK7fJGrxv1Aeoob-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                   </div>
                 </div>
             </div>
@@ -346,7 +346,20 @@
                   </a>
                 </ul>
               </div>
-              <div class="row">asdf</div>
+          </div>
+          <div class="row pt-5">
+            <div class="col">
+              <ul class="list-group">
+                <a href="assets/Resume-Angeles.pdf" class="list-group-item list-group-item-action list-group-item-light">
+                  <div class="container-fluid d-flex align-items-center">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-briefcase" viewBox="0 0 16 16">
+                      <path d="M6.5 1A1.5 1.5 0 0 0 5 2.5V3H1.5A1.5 1.5 0 0 0 0 4.5v8A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5v-8A1.5 1.5 0 0 0 14.5 3H11v-.5A1.5 1.5 0 0 0 9.5 1zm0 1h3a.5.5 0 0 1 .5.5V3H6v-.5a.5.5 0 0 1 .5-.5m1.886 6.914L15 7.151V12.5a.5.5 0 0 1-.5.5h-13a.5.5 0 0 1-.5-.5V7.15l6.614 1.764a1.5 1.5 0 0 0 .772 0M1.5 4h13a.5.5 0 0 1 .5.5v1.616L8.129 7.948a.5.5 0 0 1-.258 0L1 6.116V4.5a.5.5 0 0 1 .5-.5"/>
+                    </svg>
+                    <h1 class="mb-0 mt-1 ms-3">Link to Resume</h1>
+                  </div>
+                </a>
+              </ul>
+            </div>
           </div>
       </div>
     </div>
