--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="h-90 d-flex">
             <div class="container-fluid row gx-4 align-items-center">
                 <div class="col-4">
-                    <img src="assets/image00082.jpeg" class="rounded mx-auto d-block" alt="Me, in Northen Blossom Farm" style="width:90%; height:100%;">
+                    <img src="assets/zzz.jpeg" class="rounded mx-auto d-block" alt="Me, in Global Village" style="width:90%; height:100%;">
                 </div>
                 <div class="col-3 text-start align-self-center pt-1" >
                     <div class="row">
